--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </script>
 
   
-  <script src="assets/js/libs.min.js"></script>
-  <script src="assets/js/app.min.js"></script>
+  <script src="assets/js/libs.js"></script>
+  <script src="assets/js/app.js"></script>
     
   <script src="http://localhost:35729/livereload.js"></script>
 </body>
