--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Ember Starter Kit</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+  <head>
+  <meta charset="utf-8">
+  <title>Ember Starter Kit</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
 
-  <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
-    {{outlet}}
-  </script>
+    <script type="text/x-handlebars">
+      <h2>Trackga.in</h2>
+      <div id="chart"></div>
+      {{outlet}}
+    </script>
 
-  <script type="text/x-handlebars" data-template-name="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
-  </script>
+    <script type="text/x-handlebars" data-template-name="index">
+      <ul>
+      {{#each item in model}}
+        <li>{{item}}</li>
+      {{/each}}
+      </ul>
+    </script>
 
-  
-  <script src="assets/js/libs.js"></script>
-  <script src="assets/js/app.js"></script>
     
-  <script src="http://localhost:35729/livereload.js"></script>
-</body>
+    <script src="assets/js/libs.js"></script>
+    <script src="assets/js/app.js"></script>
+      
+    <script src="http://localhost:35729/livereload.js"></script>
+  </body>
 </html>
