Minor Changes to previous commit.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>TRACKGA.IN</title>
     <link rel='stylesheet' href='assets/css/style.css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
     <script type='text/x-handlebars'>
@@ -38,7 +39,7 @@
       </div>
     </script>
     <script type='text/x-handlebars' data-template-name='index'>
-      <button class='btn--success invert'>+</button>
+      <button class='btn--success invert'><i class='icon-plus'></i> Add Exercise</button>
       <table>
         <thead>
           <tr>
