--- a/index.html
+++ b/index.html
@@ -13,14 +13,25 @@
       <div class='trackgain'>
         <header>
           <h1>{{App.name}}</h1>
-          <span class='avatar'/>
+          <span class='avatar' {{action showDropdown}}>
+          </span>
+          <div {{bindAttr class=':dropdown dropDownExtended:show_dropdown:hide_dropdown'}}>
+              <ul>
+                <li><i class='icon-user'></i>&nbsp; Edit Profile</li>
+                <li><i class='icon-cog'></i>&nbsp; Settings</li>
+                <li><i class='icon-signout'></i>&nbsp; Logout</li>
+              </ul>
+            </div>
         </header>
         <div class='options'>
           {{view Ember.Select
             contentBinding = 'App.availablePlots'
             selectionBinding = 'App.availablePlots[0]'}}
         </div>
-        <div class='graph' id='main_graph'></div>
+        <div class='graph_container'>
+          <div id='legend'></div>
+          <div class='graph' id='main_graph'></div>
+        </div>
         <section class='app'>
             <header>
               <nav>
@@ -36,17 +47,23 @@
         </section>
       </div>
       <footer>
-        <small>2013 &copy; TRACKGA.IN</small>
+        <small>2013 &copy; TRACKGA.IN <i class='icon-twitter'></i></small>
       </footer>
     </script>
     <script type='text/x-handlebars' data-template-name='index'>
-      <button class='btn--success invert'><i class='icon-plus'></i> Add Exercise</button>
+      <div class='row'>
+        <button class='btn--success invert' {{action newExercise}}><i class='icon-plus'></i> Add Exercise</button>
+      </div>
+      <div class='row'>
+        <small class='aid_info'>Select one of the table rows to update an exercise</small>
+      </div>
       <table>
         <thead>
           <tr>
             <th>Exercise</th>
-            <th class='center'>Weight kg</th>
-            <th class='center'>Repetitions</th>
+            <th class='center'>Weight<sup>Kg</sup></th>
+            <th class='center'>Set<sup>reps</sup></th>
+            <th class='center'>Total</th>
           </tr>
         </thead>
         <tbody>
@@ -54,37 +71,76 @@
             <td>Bench Press</td>
             <td class='center'>80</td>
             <td class='center'>10</td>
+            <td class='center'>30</td>
           </tr>
           <tr>
             <td>Squats</td>
             <td class='center'>80</td>
             <td class='center'>10</td>
+            <td class='center'>30</td>
           </tr>
         </tbody>
-    </table>  
+      </table>
+    <div {{bindAttr class=':modal insertActive:show_modal:hide_modal'}}>
+      <div class='modal_header'>
+        <h2>New Exercise</h2>
+      </div>
+      <div class='modal_content'>
+        <p>{{input valueBinding='newExercise_name' placeholder='Exercise Name'}}</p>
+        <p>{{input valueBinding='newExercise_weight' placeholder='Weight e.g. 75'}}</p>
+        <p>{{input valueBinding='newExercise_reps' placeholder='Repetitions e.g. 8'}}</p>
+      </div>
+      <div class='modal_actions'>
+          <a href="#" class='btn btn--success' {{action addExercise}}> <i class='icon-ok'></i> Add</a>
+          <a href="#" class='btn btn--danger' {{action cancel}}> <i class='icon-remove'></i> Cancel</a>
+      </div>
+    </div>
+    <div class='modal_overlay'></div>
     </script>
 
     <script type='text/x-handlebars' data-template-name='measure'>
-      <p>LOLOLOL</p> 
+      <p>LOLOLOL</p>
     </script>
+
     <script src='assets/js/libs.js'></script>
     <script src='assets/js/app.js'></script>
-    <script src='http://localhost:35729/livereload.js'></script>
+    <script src='http://192.168.0.2:35729/livereload.js'></script>
     <script> 
       $(document).ready(function () {
-        var graph = new Rickshaw.Graph( {
+        var graph = new Rickshaw.Graph({
             element: document.querySelector("#main_graph"), 
-            height: 160, 
+            height: 160,
+            renderer: 'area',
             series: [{
                 color: '#5f9ad9',
-                data: [ 
-                    { x: 0, y: 24 }, 
-                    { x: 1, y: 49 }, 
-                    { x: 2, y: 20 }, 
-                    { x: 3, y: 33 }, 
-                    { x: 4, y: 15 } ]
+                data: [ { x: 1375634145, y: 50 },
+                        { x: 1377621344, y: 90 }],
+                name: 'Weight'
             }]
         });
+
+        var hoverDetail = new Rickshaw.Graph.HoverDetail( {
+          graph: graph,
+          xFormatter: function(x) { 
+            var date = new Date(x * 1000);
+            var month = date.getUTCMonth();
+            var day = date.getUTCDate();
+            var year = date.getUTCFullYear();
+
+            newdate = day + "/" + month + "/" + year;
+
+            return newdate; 
+          },
+          yFormatter: function(y) {
+              return y + 'kg';
+          }
+        } );
+
+        var xAxis = new Rickshaw.Graph.Axis.Time({
+          graph: graph,
+        });
+
+        xAxis.render();
 
         graph.render();
 
@@ -103,6 +159,7 @@
           if (new Date() - rtime < delta) {
             setTimeout(resizeend, delta);
           } else {
+            graph.configure({ width: $(".graph_container").width(), height: 160});
             graph.render();
             timeout = false;
           }               
